2008-02-21  Colin Watson  <cjwatson@debian.org>

	Initial conversion to GNOME 2.

	* configure.in (AM_ACLOCAL_INCLUDE): Remove.
	(GNOME_INIT): Call GNOME_COMMON_INIT instead.
	(GNOME_DEBUG_CHECK, GNOME_COMPILE_WARNINGS): Add.
	(GNOME_X_CHECKS): Remove.
	(PKG_CHECK_MODULES): Check for glib-2.0 and libgnomeui-2.0.
	(AM_GNU_GETTEXT): Call AM_GLIB_GNU_GETTEXT instead.
	(AM_GLIB_DEFINE_LOCALEDIR): Call this instead of doing it by hand.
	(AC_CONFIG_FILES): Remove macros/Makefile.

	* src/Makefile.am (INCLUDES): Use AM_CPPFLAGS instead. Remove explicit
	definition of GNOMELOCALEDIR, now handled by configure. Add
	TELEGNOME_CFLAGS.
	(LINK_FLAGS): Remove gdk_pixbuf and gnomecanvaspixbuf linkage.
	(telegnome_LDADD): Remove GNOMEUI_LIBS. Add TELEGNOME_LIBS.

	* src/channel.c: Tweak gnome.h inclusion. Remove unused alloc_count
	declaration.

	* src/gui.c (new_gui, new_toolbar, create_channel_menu): Remove unused
	declarations.
	(new_gui): GNOME_DOCK_TOP is now BONOBO_DOCK_TOP. Explicitly
	initialise gui.logo_timer in all cases.
	(gui_save_session, get_the_page): Return void instead of gint.
	(new_toolbar): Adjust for new gtk_toolbar_new signature. Use GTK+ 2
	stock widgets. Cast signal functions for gtk_toolbar_append_item.
	(load_channels_from_config, cb_quit): Free channel list in a way that
	doesn't generate compiler warnings.
	(refresh_channel_menu): Use g_object_unref instead of
	gtk_widget_destroy.
	(new_entry): Split gtk_entry_new_with_max_length into gtk_entry_new
	and gtk_entry_set_max_length.
	(get_the_page, gui_logo_timer): Guard gui.logo_timer removal against
	invalid timers.
	(cb_about): Adjust for new gnome_about_new signature.
	(cb_drag): Constify entry.
	(cb_keypress): Only grab the focus if the entry didn't already have
	it. Return 0 rather than 1 to let GTK+ update the visible text.
	* src/gui.h (get_the_page): Update prototype.

	* src/http.c (get_page_entry): Constify argument.
	* src/http.h (get_page_entry): Update prototype.
