@@ -1,4 +1,4 @@
 - Add zooming (again)
-- Ansynchronous image retrieving (w3c-libwww)?
+- Asynchronous image retrieving (w3c-libwww)?
 - Multiple views
 - Add a XML-Based bookmarking system (nautilus?)
